--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 </div>
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
-                    <div class="h5">Baccalauréat Série A2</div>
+                    <div class="h5">Baccalauréat</div>
                     <p class="category">Collège Saint François Xavier, Fianarantsoa Madagascar</p>
                     <p>Baccalauréat Série A2</p>
                   </div>
