--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                   <div class="card-body">
-                    <div class="h5">Développeur Front-End Junior</div>
+                    <div class="h5">Développeur full stack</div>
                     <p>
                       <strong>Type de travail</strong> : Temps plein <br>
                       <strong>Technologies</strong> : Git, Laravel, Js, jQuery, NodeJs, ReactJs, Ajax, HTML5, CSS3, SASS, Less, PHP, SQL, MongoDB <br>
