--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                     <div class="h5">Développeur full stack</div>
                     <p>
                       <strong>Type de travail</strong> : Temps plein <br>
-                      <strong>Technologies</strong> : Git, Laravel, Js, jQuery, NodeJs, ReactJs, Ajax, HTML5, CSS3, SASS, Less, PHP, SQL, MongoDB <br>
+                      <strong>Technologies</strong> : Git, Laravel, Js, jQuery, NodeJs, ReactJs, Ajax, HTML5, CSS3, SASS, Less, PHP, SQL, MongoDB, ExpressJS <br>
                       <strong>Lieu</strong> : Antsirabe, Madagascar
                   </p>
                   </div>
