--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">HTML5, CSS3, SASS, BOOTSTRAP</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">HTML5 & CSS3</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">JS, JQUERY</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">JS</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                       </div>
@@ -130,14 +130,14 @@
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">REACTJS</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">STACK MERN</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="progress-container progress-primary"><span class="progress-badge">NODEJS</span>
+                    <div class="progress-container progress-primary"><span class="progress-badge">PHP</span>
                       <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
                       </div>
