--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div class="content-center">
                   <div class="cc-profile-image"><a href="#"><img src="images/paolo.jpg" alt="Image"/></a></div>
                   <div class="h2 title">Paolo Ratsizafy</div>
-                  <p class="category text-white">Développeur d'application web</p><a class="btn btn-primary" href="images/CV_Paolo.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Télécharger mon CV</a>
+                  <p class="category text-white">Développeur d'application web</p>
+                  <!--<a class="btn btn-primary" href="images/CV_Paolo.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Télécharger mon CV</a>-->
                 </div>
               </div>
               <div class="section">
@@ -82,9 +83,9 @@
                   <div class="card-body">
                     <div class="h4 mt-0 title">Informations de base</div>
                     <div class="row">
-                      <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
+                      <!--<div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
                       <div class="col-sm-8">32</div>
-                    </div>
+                    </div>-->
                     <div class="row mt-3">
                       <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
                       <div class="col-sm-8">paolorandry@gmail.com</div>
