--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <div class="cc-profile-image"><a href="#"><img src="images/paolo.jpg" alt="Image"/></a></div>
                   <div class="h2 title">Paolo Ratsizafy</div>
                   <p class="category text-white">Développeur d'application web</p>
-                  <!--<a class="btn btn-primary" href="images/CV_Paolo.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Télécharger mon CV</a>-->
+                  <a class="btn btn-primary" href="images/CV_Paolo.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Télécharger mon CV</a>
                 </div>
               </div>
               <div class="section">
